--- a/verk7.html
+++ b/verk7.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="styles-2.css">
+    <link rel="stylesheet" type="text/css" href="verk7.css">
 </head>
 <body>
     <div class="logo">
